<resources>
    <string name="app_name">MovieApplication</string>
    <string name="sample_text">Sample Text</string>
    <string name="sample_movie_name">Sample Name</string>
    <string name="sample_release_date">07 Dec 2024</string>
    <string name="sample_rating_score">8.6/10</string>
    <string name="popular_movies_label">Popular Movies</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="sample_year_label">(2024)</string>
    <string name="overview_label">Overview</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="upcoming_label">Upcoming</string>
    <string name="see_more_label">See More</string>
    <string name="movie_detail_label">Movie Detail</string>
    <string name="play_button">Play Trailer</string>
    <string name="trailer_label">Trailer</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_to_movie_label">New to myMovie</string>
    <string name="brand_name">myMovie</string>
    <string name="welcome_back_label">Welcome back!</string>
    <string name="please_login_to_continue_label">Please Login To Continue!</string>
    <string name="email_address_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forgot_password_btn">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="create_account_btn">Create New Account</string>
    <string name="re_password_label">Re-Password</string>
    <string name="Register_label">Become New Member!</string>
    <string name="old_to_movie_label">Have A Account?</string>
    <string name="return_login_btn">Login</string>
    <string name="display_name_label">Display Name</string>
    <string name="register_btn">Register</string>
    <string name="forgot_password_label">Forgot Password? Don\'t Worry!</string>
    <string name="email_recovery_label">Enter Email for Recovery</string>
    <string name="recovery_btn">Send</string>
    <string name="counter_clock_sample_label">05:00</string>
    <string name="add_to_wish_list_btn">Add to Wish List</string>
    <string name="user_information_label">User Information</string>
    <string name="remember_me_label">Remember Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="display_name_hint">Display Name</string>
    <string name="email_label">Email</string>
    <string name="dob_label">DOB</string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="address_label">Address</string>
    <string name="phone_label">Phone</string>
    <string name="wish_list_label">Wish List</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="message_detail_label">Message</string>

    <string name="base_url">https://api.themoviedb.org/</string>
    <string name="language">en-US</string>
    <string name="page">1</string>
    <string name="include_adult">false</string>
    <string name="size">w500</string>
    <string name="image_url">https://image.tmdb.org/t/p/</string>
    <string name="auth_header">Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJmOGE3MTZjYjE1MWVjMTA4MjhlMTIxYTgwMzA1ZjUxZSIsIm5iZiI6MTcxOTgwNDcyNS45MjA1NDksInN1YiI6IjY2ODE0MzU4NWNkMDlkN2ExMjQ3ZGE2OSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.Wd5q6Lon_vCzRnuQozf-SsF1ZzkCM6x0JvVxdpIQCJ8</string>
</resources>