<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.forgotpassword.ForgotComponent">
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="285sp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:alpha="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="102sp"
        android:layout_height="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_image"
        app:layout_constraintBottom_toTopOf="@id/welcome_back_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/welcome_back_label"
        android:layout_width="304sp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_label"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/login_image"
        app:layout_constraintEnd_toEndOf="@id/login_image"
        app:layout_constraintStart_toStartOf="@id/login_image"
        app:layout_constraintBottom_toBottomOf="@id/login_image"/>

    <LinearLayout
        android:id="@+id/input_recovery_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_btn">
        <LinearLayout
            android:id="@+id/input_email_container"
            android:layout_width="325sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/email_recovery_label"
                android:layout_width="wrap_content"
                android:layout_height="22sp"
                android:text="@string/email_recovery_label"
                android:textColor="@color/gray_800"
                android:textSize="13sp"
                android:layout_marginBottom="12sp"/>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Email"
                android:padding="5dp"
                android:background="@drawable/edit_text_border"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/counter_clock_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:text="@string/counter_clock_sample_label"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="325sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/elf_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_recovery_container"
        app:layout_constraintBottom_toTopOf="@id/sign_up_container"
        android:text="@string/recovery_btn"/>

    <LinearLayout
        android:id="@+id/sign_up_container"
        android:layout_width="174sp"
        android:layout_height="45sp"
        app:layout_constraintTop_toBottomOf="@id/send_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/old_to_scratch_label"
            android:layout_width="173sp"
            android:layout_height="22sp"
            android:text="@string/old_to_movie_label"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/input_email_container"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/return_login_btn"
            android:layout_width="167sp"
            android:layout_height="20sp"
            android:text="@string/return_login_btn"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/elf_green"
            app:layout_constraintTop_toBottomOf="@id/input_email_container"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>